# volunteerhub

./: .dockerignore  .env.example  .gitignore  BaseCore.sln  README.md  docker-compose.nginx.yml  docker-compose.yml
BaseCore.APIService/: EventLifecycleHostedService.cs  Program.cs  appsettings.json
BaseCore.ApiGateway/: BaseCore.ApiGateway.csproj  Program.cs  ocelot.docker.json  ocelot.json
BaseCore.AuditLog/: Startup.cs  appsettings.json
BaseCore.AuthService/: .env.example  BaseCore.AuthService.csproj  Program.cs  appsettings.json
BaseCore.CertificateWorker/: .env.example  Cargo.toml  README.md
BaseCore.CertificateWorker/src/: main.rs
BaseCore.Entities/: Channel.cs  Comment.cs  Event.cs  PendingRegistration.cs  Post.cs  PushDeviceToken.cs  Rating.cs  Registration.cs  SponsorProjectMilestone.cs  SponsorshipProposal.cs  SupportCampaign.cs  User.cs  VolunteerProfile.cs  VolunteerSkill.cs
BaseCore.EventService/: BaseCore.EventService.csproj  Program.cs  appsettings.json
BaseCore.FinanceService/: BaseCore.FinanceService.csproj  Program.cs  appsettings.json
BaseCore.MobileApp/: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json  skills-lock.json
BaseCore.Repository/: MySqlDbContext.cs
BaseCore.Services/: BaseCore.Services.csproj  CategoryService.cs  ICategoryService.cs
BaseCore.UnitTest/: appsettings.json
BaseCore.WebClient/: README.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js
Context/: VolunteerHub-backend-functions-for-stitch.md  VolunteerHub-business-flow-audit-plan.md  (+13 more)
(+393 files in other folders)
