[package]
name = "basecore-certificate-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
futures-util = "0.3"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "net", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono", "winauth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
